gccida/g3/gen_formal_parameter_die
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_formal_parameter_die/src/dwarf2out.c:10458:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_formal_parameter_die/src/dwarf2out.c:10459:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_formal_parameter_die/src/dwarf2out.c:10492:46: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
*( __m128i *)&v20->die = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)v4, ( __m128i)( unsigned __int64)node); 
                                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_formal_parameter_die/src/dwarf2out.c:10492:79: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
*( __m128i *)&v20->die = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)v4, ( __m128i)( unsigned __int64)node); 
                                                                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_formal_parameter_die/src/dwarf2out.c:10498:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 10025, "gen_formal_parameter_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_formal_parameter_die/src/dwarf2out.c:10542:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 9459, "add_abstract_origin_attribute"); 
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_formal_parameter_die/src/obj/dwarf2out.o] Error 1
